; ModuleID = '/home/carl/AnghaBench/openwrt/tools/firmware-utils/src/extr_buffalo-tftp.c_check_params.c'
source_filename = "/home/carl/AnghaBench/openwrt/tools/firmware-utils/src/extr_buffalo-tftp.c_check_params.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ifname = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [24 x i8] c"no input file specified\00", align 1
@ofname = common dso_local global i32* null, align 8
@.str.1 = private unnamed_addr constant [25 x i8] c"no output file specified\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @check_params to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_params() #0 {
  %1 = alloca i32, align 4
  store i32 -1, i32* %1, align 4
  %2 = load i32*, i32** @ifname, align 8
  %3 = icmp eq i32* %2, null
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = call i32 @ERR(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  br label %12

6:                                                ; preds = %0
  %7 = load i32*, i32** @ofname, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %11

9:                                                ; preds = %6
  %10 = call i32 @ERR(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0))
  br label %12

11:                                               ; preds = %6
  store i32 0, i32* %1, align 4
  br label %12

12:                                               ; preds = %11, %9, %4
  %13 = load i32, i32* %1, align 4
  ret i32 %13
}

declare dso_local i32 @ERR(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
